--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -14,23 +14,19 @@
         <div class="card p-4">
             <div class="image d-flex flex-column justify-content-center align-items-center">
                 <div class="form-icon"><i class="fa fa-user"></i></div>
-                <span class="name mt-3">Eleanor Pena</span>
-                <span class="idd">@eleanorpena</span>
-                <div class="d-flex flex-row justify-content-center align-items-center gap-2">
-                    <span class="idd1">Oxc4c16a645_b21a</span>
-                    <span><i class="fa fa-copy"></i></span>
-                </div>
+                <span class="name mt-3">{{ user.name }} {{ user.surname }}</span>
+                <span class="idd"> {{ user.email }}</span>
                 <div class="d-flex flex-row justify-content-center align-items-center mt-3">
-                    <span class="number">1069 <span class="follow">Followers</span></span>
+                    <span class="number">1069 <span class="follow">Notes</span></span>
                 </div>
                 <div class="d-flex mt-2">
                     <button class="btn1 btn-dark">Edit Profile</button>
                 </div>
                 <div class="text mt-3">
-                    <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>
+                    <span>{{ user.description }}</span>
                 </div>
                 <div class="px-2 rounded mt-4 date">
-                    <span class="join">Joined May,2021</span>
+                    <span class="join">{{ user.created_at }}</span>
                 </div>
             </div>
         </div>
