--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', path='css/profile.css') }}">
+    <script src="{{ url_for('static', path='js/profile.js') }}"></script>
     <title>Document</title>
 </head>
 <body>
@@ -14,19 +16,27 @@
         <div class="card p-4">
             <div class="image d-flex flex-column justify-content-center align-items-center">
                 <div class="form-icon"><i class="fa fa-user"></i></div>
-                <span class="name mt-3">{{ user.name }} {{ user.surname }}</span>
-                <span class="idd"> {{ user.email }}</span>
+                <span id="user-info" class="name mt-3" ></span>
+                <span id="email" class="idd"></span>
                 <div class="d-flex flex-row justify-content-center align-items-center mt-3">
                     <span class="number">1069 <span class="follow">Notes</span></span>
                 </div>
-                <div class="d-flex mt-2">
-                    <button class="btn1 btn-dark">Edit Profile</button>
-                </div>
                 <div class="text mt-3">
-                    <span>{{ user.description }}</span>
+                    <span id="description"></span>
                 </div>
                 <div class="px-2 rounded mt-4 date">
-                    <span class="join">{{ user.created_at }}</span>
+                    <span id="created_ad" class="join"></span>
+                </div>
+                <div class="d-flex mt-2">
+                    <button onclick="toggleButtons()" class="btn1 btn-dark">Options</button>
+                </div>
+                <div class="menu">
+                    <div class="d-flex mt-2">
+                        <button onclick="EditRedirect()" class="btn1 btn-dark">Edit Profile</button>
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button onclick="logoutUser()" class="btn1 btn-dark"><i class="fa fa-sign-out-alt"></i> Logout</button>
+                    </div>
                 </div>
             </div>
         </div>
