--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -6,48 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', path='css/login.css') }}">
-    <script src="{{ url_for('static', path='js/login.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', path='css/reset_password.css') }}">
+    <script src="{{ url_for('static', path='js/reset_password.js') }}"></script>
 
-   <title>Authorisation</title>
+   <title>Reset password</title>
 </head>
 <body>
         <div class="container-fluid">
             <div class="col-md-4 offset-md-4">
                 <div class="form-container">
                     <div class="form-icon"><i class="fa fa-user"></i></div>
-                    <h3 class="title">Login</h3>
+                    <h3 class="title">Reset password</h3>
                     <form class="form-horizontal">
                         <div class="form-group">
                             <label>email</label>
                             <input class="form-control" id="email" type="email" placeholder="email address">
                         </div>
-                        <div class="form-group">
-                            <label>password</label>
-                            <input class="form-control" id="password" type="password" placeholder="password">
-                        </div>
-                        <button type="button" onclick="loginUser()" class="btn btn-default">Login</button>
+                        <button type="button" onclick="resetPassword()" class="btn btn-default">Reset</button>
                         <div class="mt-3 text-center">
                             <a href="http://127.0.0.1:8000/pages/login" class="text-pink">Sign In</a>
                             <span class="text-pink">|</span>
                             <a href="http://127.0.0.1:8000/pages/register" class="text-pink">Sign Up</a>
-                            <span class="text-pink">|</span>
-                            <a href="http://127.0.0.1:8000/pages/reset/password" class="text-pink">Fogot password</a>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    <br>
-    <dialog id="authError">
-        Неверный логин или пароль!
-        <button type="button" onclick="window.authError.close();">
-            ок
-        </button>
-    </dialog>
-    <dialog id="passwordError">
-        Неверный пароль!
-        <button type="button" onclick="window.passwordError.close();">
+    <dialog id="newPass">
+        Пароль сброшен. Новый пароль выслали на почту!
+        <button type="button" onclick="window.newPass.close();">
             ок
         </button>
     </dialog>
