исправил ошибку отсутствия поля description

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -51,5 +51,11 @@
             ок
         </button>
     </dialog>
+    <dialog id="deletedError">
+        <a href="http://127.0.0.1:8000/pages/activate">Перейти для восстановления аккаунта</a>
+        <button type="button" onclick="window.passwordError.close();">
+            Закрыть
+        </button>
+    </dialog>
 </body>
 </html>
