--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -35,6 +35,9 @@
                         <button onclick="EditRedirect()" class="btn1 btn-dark">Edit Profile</button>
                     </div>
                     <div class="d-flex justify-content-end">
+                        <button onclick="deleteUser()" class="btn1 btn-danger">Delete</button>
+                    </div>
+                    <div class="d-flex justify-content-end">
                         <button onclick="logoutUser()" class="btn1 btn-dark"><i class="fa fa-sign-out-alt"></i> Logout</button>
                     </div>
                 </div>
